@@ -1,5 +1,6 @@
 0.1401
   fixed duprication result value([$value, $value] to $value])
+  renamed Validator::Custom::Result::has_missing_param to has_missing
 0.1304
   added experimental "Validate::Custom::Result has_missing_param" method
 0.1303
